src/test/resources/purescript_examples/passing/NamedPatterns.purs.psi
Purescript File
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Console')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSASTWrapperElement(ValueRef)
            PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('foo')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PsiElement(\)('\')
            PSASTWrapperElement(Abs)
              PsiElement(identifier)('x')
              PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PSASTWrapperElement(Value)
              PSASTWrapperElement(PrefixValue)
                PSASTWrapperElement(Case)
                  PsiElement(case)('case')
                  PsiElement(whitespace)(' ')
                  PSASTWrapperElement(Value)
                    PSASTWrapperElement(PrefixValue)
                      PSASTWrapperElement(Var)
                        PSASTWrapperElement(Qualified)
                          PsiElement(identifier)('x')
                          PsiElement(whitespace)(' ')
                  PsiElement(of)('of')
                  PsiElement(whitespace)('\n  ')
                  PSASTWrapperElement(CaseAlternative)
                    PSASTWrapperElement(Value)
                      PSASTWrapperElement(PrefixValue)
                        PSASTWrapperElement(Var)
                          PSASTWrapperElement(Qualified)
                            PsiElement(identifier)('y')
                      PSASTWrapperElement(IdentInfix)
                        PSASTWrapperElement(Qualified)
                          PsiElement(operator)('@')
                      PSASTWrapperElement(Value)
                        PSASTWrapperElement(PrefixValue)
                          PSASTWrapperElement(ObjectLiteral)
                            PsiElement({)('{')
                            PsiElement(whitespace)(' ')
                            PSASTWrapperElement(ObjectBinderField)
                              PSASTWrapperElement(identifier)
                                PsiElement(identifier)('foo')
                              PsiElement(operator)(':')
                              PsiElement(whitespace)(' ')
                              PSASTWrapperElement(Value)
                                PSASTWrapperElement(PrefixValue)
                                  PSASTWrapperElement(StringLiteral)
                                    PsiElement(string)('"Foo"')
                                    PsiElement(whitespace)(' ')
                            PsiElement(})('}')
                            PsiElement(whitespace)(' ')
                    PsiElement(->)('->')
                    PsiElement(whitespace)(' ')
                    PSASTWrapperElement(Value)
                      PSASTWrapperElement(PrefixValue)
                        PSASTWrapperElement(Var)
                          PSASTWrapperElement(Qualified)
                            PsiElement(identifier)('y')
                            PsiElement(whitespace)('\n  ')
                  PSASTWrapperElement(CaseAlternative)
                    PSASTWrapperElement(Value)
                      PSASTWrapperElement(PrefixValue)
                        PSASTWrapperElement(Var)
                          PSASTWrapperElement(Qualified)
                            PsiElement(identifier)('y')
                            PsiElement(whitespace)(' ')
                    PsiElement(->)('->')
                    PsiElement(whitespace)(' ')
                    PSASTWrapperElement(Value)
                      PSASTWrapperElement(PrefixValue)
                        PSASTWrapperElement(Var)
                          PSASTWrapperElement(Qualified)
                            PsiElement(identifier)('y')
                            PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PSASTWrapperElement(Var)
              PSASTWrapperElement(Qualified)
                PsiElement(identifier)('log')
                PsiElement(whitespace)(' ')
            PSASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
